Fixed problem with black space at the bottom of the page when the text of the quote is too big for the size of the screen.

--- a/src/app/components/components.module.css
+++ b/src/app/components/components.module.css
@@ -4,8 +4,8 @@
 }
 
 #container {
-  transition: background-color var(--fade-duration) ease;
-  font-size: 25px;
+  height: 100%;
+  font-size: 25px;  
 }
 
 .quoteBox {
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 #share {
