--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,9 @@
 
 html,
 body {
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
